[gd_scene load_steps=12 format=3 uid="uid://cvgwvu7uoyvqa"]

[ext_resource type="Script" path="res://player.gd" id="1_1cjcd"]
[ext_resource type="PackedScene" uid="uid://ci5wm2me5ta0f" path="res://bullet.tscn" id="2_kj80x"]
[ext_resource type="Texture2D" uid="uid://ct3v5uanqcjs6" path="res://art/player_gun.png" id="3_om7ew"]
[ext_resource type="Texture2D" uid="uid://d4kd7a86aqaf2" path="res://art/pistol.png" id="5_ebkfr"]
[ext_resource type="Texture2D" uid="uid://dea0m4ktyf6aa" path="res://art/framebaseplayer-Sheet.png" id="5_q6rye"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aobjm"]
size = Vector2(180, 58)

[sub_resource type="Animation" id="Animation_4ahi7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fddfp"]
resource_name = "left_punch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_n6qj2"]
resource_name = "right_punch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwjn4"]
_data = {
"RESET": SubResource("Animation_4ahi7"),
"left_punch": SubResource("Animation_fddfp"),
"right_punch": SubResource("Animation_n6qj2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xijjo"]
radius = 50.0899

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_1cjcd")
bullet = ExtResource("2_kj80x")

[node name="PunchTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_q6rye")
hframes = 4

[node name="PunchArea" type="Area2D" parent="Sprite2D"]

[node name="Hurtbox" type="CollisionShape2D" parent="Sprite2D/PunchArea"]
position = Vector2(-9.53674e-06, -208)
shape = SubResource("RectangleShape2D_aobjm")

[node name="GunAndWep" type="Node2D" parent="."]

[node name="AK47_Sprite" type="Sprite2D" parent="GunAndWep"]
position = Vector2(55, 1)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_om7ew")

[node name="m9_Sprite" type="Sprite2D" parent="GunAndWep"]
position = Vector2(36, 1)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ebkfr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nwjn4")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xijjo")

[node name="AK47Timer" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[connection signal="timeout" from="PunchTimer" to="." method="_on_punch_timer_timeout"]
[connection signal="area_entered" from="Sprite2D/PunchArea" to="." method="_on_punch_area_area_entered"]
[connection signal="timeout" from="AK47Timer" to="." method="_on_ak_47_timer_timeout"]
